--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "yarn typeorm migration:generate ./src/db/migrations/Migration -d src/db/data-source.ts",
+    "migration:run": "yarn typeorm migration:run -d src/db/data-source.ts",
+    "migration:revert": "yarn typeorm migration:revert -d src/db/data-source.ts",
+    "migration:show": "yarn typeorm migration:show -d src/db/data-source.ts",
+    "migration:create": "yarn typeorm migration:create ./src/db/migrations/Migration"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
