feat(auth): authentication and authorization wiht cognito

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,8 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=12345
 POSTGRES_DB=LGP-DB
 PORT=3000
+
+# AWS Cognito
+AWS_REGION=
+COGNITO_USER_POOL_ID=
+COGNITO_CLIENT_ID=
