--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=12345
 POSTGRES_DB=LGP-DB
 PORT=3000
-REDIS=
+REDIS=redis://localhost:6379
 
 # AWS Cognito
 AWS_REGION=
