--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,9 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=12345
 POSTGRES_DB=LGP-DB
 PORT=3000
-REDIS=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
+MATCH_TTL=3600
 
 # AWS Cognito
 AWS_REGION=
