--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.958.0",
+    "@keyv/redis": "^5.1.6",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -38,6 +39,7 @@
     "@nestjs/websockets": "^11.1.8",
     "@socket.io/redis-adapter": "^8.3.0",
     "aws-jwt-verify": "^5.1.1",
+    "cacheable": "^2.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "jwks-rsa": "^3.2.0",
